--- a/css/narrow-screen.css
+++ b/css/narrow-screen.css
@@ -95,9 +95,10 @@
         transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
     }
 
-    #menu li {
+    ul#menu li {
         padding: 10px 0;
         font-size: 22px;
+        display: block;
     }
 
     #menuToggle input:checked ~ ul {
